# plutus-simple-drop-contract

./: .gitignore  README.md  plutus-starter.cabal  simple_drop.plutus
scripts/: delegation_snapshot.sh
src/SimpleDrop/: DeployDrop.hs  DropValidator.hs
